--- a/d00/ex04/menu.html
+++ b/d00/ex04/menu.html
@@ -1,42 +1,124 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Sandwich SNCF</title>
-    <link rel="stylesheet" href="menu.css">
-</head>
-<body>
-    <ul class="menu">
-        <li>Menu</li>
-        <li><a href="#">Bonjour</a></li>
-        <li><a href="#">Comment</a></li>
-        <li><a href="#">Vas</a></li>
-        <li><a href="#">Tu</a></li>
-        <li><a href="#">?</a></li>
-    </ul>
-    <ul class="menu">
-        <li>Menu</li>
-        <li><a href="#">Bonjour</a></li>
-        <li><a href="#">Comment</a></li>
-        <li><a href="#">Vas</a></li>
-        <li><a href="#">Tu</a></li>
-        <li><a href="#">?</a></li>
-    </ul>
-    <ul class="menu">
-        <li>Menu</li>
-        <li><a href="#">Bonjour</a></li>
-        <li><a href="#">Comment</a></li>
-        <li><a href="#">Vas</a></li>
-        <li><a href="#">Tu</a></li>
-        <li><a href="#">?</a></li>
-    </ul>
-    <ul class="menu">
-        <li>Menu</li>
-        <li><a href="#">Bonjour</a></li>
-        <li><a href="#">Comment</a></li>
-        <li><a href="#">Vas</a></li>
-        <li><a href="#">Tu</a></li>
-        <li><a href="#">?</a></li>
-    </ul>
-</body>
-</html>
+	<head>
+		<title>menu</title>
+		<link rel="stylesheet" type="text/css" href="menu.css">
+	</head>
+	<body>
+		<div id="all">
+		<div tabindex="0" class="onclick-menu button1" style="">
+			<ul class="onclick-menu-content" >
+				<div class="dropdown">
+					<button class="button">Beaf sandwitch
+						<div class="dropdown-content">
+  							<a href="#">Double beaf</a>
+ 							<a href="#">Triple beaf</a>
+ 							<a href="#">Mix</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">Chicken sandwitch
+						<div class="dropdown-content">
+  							<a href="#">Double chicken</a>
+ 							<a href="#">No chicken</a>
+ 							<a href="#">No sandwitch</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">Pork sandwitch
+						<div class="dropdown-content">
+							<a href="#">Double pork</a>
+ 							<a href="#">Full pig</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">Vegan sandwitch
+						<div class="dropdown-content">
+  							<a href="#">Sex</a>
+ 							<a href="#">Drugs</a>
+ 							<a href="#">Rock&Roll</a>
+						</div>
+					</button>
+				</div>
+			</ul>
+		</div>
+		<div tabindex="0" class="onclick-menu button2" style="">
+			<ul class="onclick-menu-content" >
+				<div class="dropdown">
+					<button class="button">New York
+						<div class="dropdown-content">
+  							<a href="#">With cola</a>
+ 							<a href="#">With cola and fries</a>
+ 							<a href="#">Double with cola</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">Kentucky
+						<div class="dropdown-content">
+   							<a href="#">With cola</a>
+ 							<a href="#">With cola and fries</a>
+ 							<a href="#">Double with cola</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">Carolina
+						<div class="dropdown-content">
+    						<a href="#">With cola</a>
+ 							<a href="#">With cola and fries</a>
+ 							<a href="#">Double with cola</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">Salad
+						<div class="dropdown-content">
+    						<a href="#">Salad :))</a>
+ 						</div>
+					</button>
+				</div>
+
+			</ul>
+		</div>
+		<div tabindex="0" class="onclick-menu button3" style="">
+			<ul class="onclick-menu-content" >
+				<div class="dropdown">
+					<button class="button">Mushrooms
+						<div class="dropdown-content">
+  							<a href="#">A bit of</a>
+ 							<a href="#">A lot of</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">More mushrooms
+						<div class="dropdown-content">
+  							<a href="#">A bit of</a>
+ 							<a href="#">A lot of</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">No mushrooms
+						<div class="dropdown-content">
+  							<a href="#">Empty</a>
+						</div>
+					</button>
+				</div>
+				<div class="dropdown">
+					<button class="button">More no mushrooms
+						<div class="dropdown-content">
+  							<a href="#">Empty</a>
+ 							<a href="#">Full empty</a>
+ 							<a href="#">Full empty empty</a>
+						</div>
+					</button>
+				</div>
+			</ul>
+		</div>
+		</div>
+	</body>
+</html
